<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item
            android:id="@+id/nav_visionmix"
            android:title="@string/visionmix" />
        <item
            android:id="@+id/nav_photoshop"
            android:title="@string/photoshop" />
        <item
            android:id="@+id/nav_frame"
            android:title="@string/frameeffect" />
        <item
            android:id="@+id/nav_sticker"
            android:title="@string/sticker" />
    </group>

    <group>
        <item
            android:id="@+id/nav_mygallery"
            android:title="@string/mygallery" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/help" />
    </group>
</menu>