<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <include layout="@layout/activity_main_content"></include>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/color_navdrawer_back"
        android:measureAllChildren="false"
        app:headerLayout="@layout/nav_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/navi_header_height">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/ll_visionmix"
                android:layout_width="match_parent"
                android:layout_height="@dimen/navi_button_height"
                android:background="@drawable/drawer_btn_back"
                android:gravity="center_vertical"
                android:onClick="onDrawerButtonClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navi_button_icon_height"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/drawer_icon_visionmix" />

                <TextView
                    style="@style/Drawer_Button_TextStyle"
                    android:text="@string/visionmix" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_photoshop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/navi_button_height"
                android:layout_marginTop="5dip"
                android:background="@drawable/drawer_btn_back"
                android:gravity="center_vertical"
                android:onClick="onDrawerButtonClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navi_button_icon_height"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/drawer_icon_photoshop" />

                <TextView
                    style="@style/Drawer_Button_TextStyle"
                    android:text="@string/photoshop" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/ll_frameeffect"
                android:layout_width="match_parent"
                android:layout_height="@dimen/navi_button_height"
                android:layout_marginTop="5dip"
                android:background="@drawable/drawer_btn_back"
                android:gravity="center_vertical"
                android:onClick="onDrawerButtonClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navi_button_icon_height"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/drawer_icon_frame" />

                <TextView
                    style="@style/Drawer_Button_TextStyle"
                    android:text="@string/frameeffect" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_sticker"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/drawer_btn_back"
                android:gravity="center_vertical"
                android:onClick="onDrawerButtonClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navi_button_icon_height"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/drawer_icon_sticker" />

                <TextView
                    style="@style/Drawer_Button_TextStyle"
                    android:text="@string/sticker" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_camera"
                android:layout_width="match_parent"
                android:layout_height="@dimen/navi_button_height"
                android:layout_marginTop="20dip"
                android:background="@drawable/drawer_btn_back"
                android:gravity="center_vertical"
                android:onClick="onDrawerButtonClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navi_button_icon_height"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/drawer_icon_camera" />

                <TextView
                    style="@style/Drawer_Button_TextStyle"
                    android:text="@string/camera" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_help"
                android:layout_width="match_parent"
                android:layout_height="@dimen/navi_button_height"
                android:layout_marginTop="5dip"
                android:background="@drawable/drawer_btn_back"
                android:gravity="center_vertical"
                android:onClick="onDrawerButtonClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navi_button_icon_height"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/drawer_icon_help" />

                <TextView
                    style="@style/Drawer_Button_TextStyle"
                    android:text="@string/help" />
            </LinearLayout>

        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>